[package]
name = "rust_wasm"
version = "0.1.0"
authors = ["Steen Larsen <sla@keycore.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "^0.6.0"
# reqwest = { version = "0.10.4", features = ["blocking", "json"] }
# tokio = { version = "0.2", features = ["full"] }
wasm-bindgen = "^0.2.50"
strum = "0.18.0"
strum_macros = "0.18.0"
# For serialization, eg sending requests to a server. Otherwise, not required.
serde = { version = "^1.0.85", features = ['derive'] }
futures = "^0.3.4"


[dev-dependencies]
wasm-bindgen-test = "0.2.50" # NOTE: keep in sync with wasm-bindgen version


[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
