[package]
name = "rust_wasm"
version = "0.1.0"
authors = ["Steen Larsen <sla@keycore.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "^0.7.0"
wasm-bindgen = "^0.2.50"
# For serialization, eg sending requests to a server. Otherwise, not required.
serde = { version = "^1.0.85", features = ['derive'] }
futures = "^0.3.4"
esdh_data_structs = { git = "https://github.com/surt666/esdh_data_structs" }
serde-value = "0.6.0"
strum = "0.18.0"
strum_macros = "0.18.0"

[dev-dependencies]
wasm-bindgen-test = "^0.2.50" # NOTE: keep in sync with wasm-bindgen version


[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
